<resources>
    <string name="app_name">Maternity Drive</string>
    <string name="AppHeadingCustomerLoginSignupActivity">Maternity Drive</string>
    <string name="EditTextEmailTxt">Email</string>
    <string name="EditTextPasswordTxt">Password</string>
    <string name="ButtonLoginTxt">Login</string>
    <string name="ButtonRegisterTxt">Register</string>
    <string name="btn_link_to_register">Get registered with<b><i> Maternity Drive now!</i></b></string>
    <string name="title_activity_maternity_drive_services">MaternityDriveServices</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="SelectService">Select Service</string>
    <string name="ApiKey">AIzaSyDDgoM9qLeKZaiMLyZnLur8zsMbGhT_-Xo</string>
    <string name="signUpError">Sign up Error:Check Email, Password, Data connection</string>
    <string name="signInError">Sign in Error:Check Email, Password, Data connection</string>
    <string name="enterEmail">Enter Email address!</string>
    <string name="enterPassword">Enter Password!</string>
    <string name="Ambulance">Ambulance</string>
    <string name="RequestAmbulance">Request Ambulance</string>
    <string name="Get">Getting Ambulance for You.....</string>
    <string name="Header_1">Mid Wife</string>
    <string name="RequestMidwife">Request Mid Wife.....</string>
    <string name="midwife">Getting Mid wife for You.....</string>
    <string name="Special">Special</string>
    <string name="RequestSpecial">Request Special</string>
    <string name="Getspecial">Getting Special for You.....</string>
    <string name="DriverLocation">Getting Driver Location</string>
    <string name="DriverFound">Driver Found</string>
    <string name="YourDriver">Your Driver</string>
    <string name="PaymentOptions">Payment Options</string>
    <string name="TripHistory">Trip History</string>
    <string name="HelpFeed">Help &amp; Feed back</string>
    <string name="Profile">Profile</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="DriverHere">Driver is Here</string>
    <string name="CancelRequest">Cancel Request</string>
    <string name="DriverDistance">Driver Distance:</string>
    <string name="ProfileTextName">Your name here</string>
    <string name="ProfileTextPhone">Your Phone number</string>
    <string name="ProfileConfirmBtn">Confirm</string>
    <string name="ProfileBackBtn">Back</string>
    <string name="About">About</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="short_password">Password too short, enter minimum 8 characters!</string>
    <string name="btn_forgot_password">Forgot your password ?</string>
    <string name="PasswordResetMsg">We just need your registered Email Id to send you password reset instructions</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="registeredID">Please enter your registered email id</string>
    <string name="sentYou">We have sent you instructions to reset your password!</string>
    <string name="resetFailded">Failed to send reset email!</string>
    <string name="DefaultDestination">Destination:--</string>
    <string name="Destination">Destination:</string>
    <string name="grant_permission">Please Provide the <b><i>Permission</i></b></string>
    <string name="title_activity_ambulance_customer_map">Map</string>
</resources>