<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:orientation="vertical"
    tools:context="com.jammbcstore.maternitydrive.CustomerLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/MaternityDriveAppBarAppNameColor"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/MaternityDriveToolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/MaternityDriveAppBarColor"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@color/MaternityDriveAppBarAppNameColor">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:text="@string/app_name"
                        android:textColor="@color/MaternityDriveAppBarAppNameColor"
                        android:textSize="20sp" />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>

        </RelativeLayout>

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/CustomerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/EditTextEmailTxt"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/CustomerPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/EditTextPasswordTxt"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/CustomerLoginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimaryDarkCorrect"
            android:text="@string/ButtonLoginTxt"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/CustomerGetRegisteredBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>

