<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.jammbcstore.maternitydrive.SettingsActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/MaternityDriveToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/MaternityDriveAppBarColor"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/MaternityDriveAppBarAppNameColor">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="@string/Profile"
                    android:textColor="@color/MaternityDriveAppBarAppNameColor"
                    android:textSize="20sp" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ProfileImage"
                android:layout_width="150sp"
                android:layout_height="150sp"
                android:layout_gravity="center"
                android:src="@drawable/ic_default_user" />

            <EditText
                android:id="@+id/CustomerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/ProfileTextName"
                android:inputType="text"
                android:padding="20dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/CustomerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/ProfileTextPhone"
                android:inputType="phone"
                android:padding="20dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/CustomerProfileConfirmBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/ProfileConfirmBtn"
                android:textColor="@color/MaternityDriveAppBarAppNameColor"
                android:textSize="20sp" />

            <Button
                android:id="@+id/CustomerProfileBackBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:padding="5dp"
                android:text="@string/ProfileBackBtn"
                android:textColor="@color/MaternityDriveAppBarAppNameColor"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
