<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jammbcstore.maternitydrive.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/MaternityDriveToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/MaternityDriveAppBarColor"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/MaternityDriveAppBarAppNameColor">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/optionsBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/Settings"
                android:textColor="@color/MaternityDriveAppBarAppNameColor"
                android:textSize="20sp" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardViewTwo"
            android:layout_gravity="center"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/About"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@color/OptionsButtonColor"
                android:drawableLeft="@drawable/ic_help_black_24dp"
                android:padding="20dp"
                android:text="@string/About" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardViewAbout"
            android:layout_gravity="center"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/Logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/OptionsButtonColor"
                android:drawableLeft="@drawable/ic_power_settings_new_black_24dp"
                android:padding="20dp"
                android:text="@string/Logout" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
